--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -27,7 +27,7 @@
 
   <body>
     <div class="container">
-		<div layout:fragment="content" class="foo"></div>
+		<div layout:fragment="content"></div>
     </div> <!-- /container -->
 
 
