--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,66 @@
     <title>Holiday Cards!</title>
   </head>
   
-  <body>
+  <body class="home">
   	<div layout:fragment="content">
-  		Cards!
+		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse"
+						data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="/" th:href="@{/}">Holiday Cards</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="/" th:href="@{/}">Home</a></li>
+					</ul>
+					<form class="navbar-form navbar-right" role="logout" th:action="@{/logout}" method="POST">
+						<button type="submit" class="btn btn-default">Logout</button>
+						<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+					</form>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+		</div>
+		<div class="page-header">
+  			<h1>Holiday Cards List <small>Friends n' stuff</small></h1>
+		</div>
+		<div class="row">
+			<div class="col-md-offset-10 col-md-2 text-right">
+				<strong>Year</strong>
+				<select name="year">
+					<option>2012</option>
+				</select>
+			</div>
+		</div>
+		<div class="row">
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Address</th>
+						<th>Card</th>
+						<th>Received Card</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="item : ${items}">
+						<td><a href="ownerDetails.html"
+							th:href="@{|/owners/${owner.id}|}"
+							th:text="|${owner.firstName} ${owner.lastName}|">Mary Smith</a></td>
+						<td th:text="${owner.address}">45, Oxford Street</td>
+						<td th:text="${owner.city}">Cambridge</td>
+						<td th:text="${owner.telephone}">555-555-555</td>
+						<td><span th:each="pet : ${owner.pets}" th:text="${pet.name}"
+							th:remove="tag"> Rob </span></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
   </body>
 </html>	
