--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,43 +7,27 @@
   </head>
   
   <body class="home">
-  	<div layout:fragment="content">
-		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse"
-						data-target=".navbar-collapse">
-						<span class="sr-only">Toggle navigation</span> <span
-							class="icon-bar"></span> <span class="icon-bar"></span> <span
-							class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="/" th:href="@{/}">Holiday Cards</a>
-				</div>
-				<div class="navbar-collapse collapse">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="/" th:href="@{/}">Home</a></li>
-					</ul>
-					<form class="navbar-form navbar-right" role="logout" th:action="@{/logout}" method="POST">
-						<button type="submit" class="btn btn-default">Logout</button>
-						<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
-					</form>
-				</div>
-				<!--/.nav-collapse -->
-			</div>
-		</div>
-		<div class="page-header">
-  			<h1>Holiday Cards List <small>Friends n' stuff</small></h1>
-		</div>
+	<div layout:fragment="header">
+ 			<h1>Holiday Cards List <small>Friends n' stuff</small></h1>
+	</div>
+  	<div layout:fragment="page">
 		<div class="row">
 			<div class="col-md-offset-10 col-md-2 text-right">
 				<strong>Year</strong>
-				<select name="year">
-					<option>2012</option>
-				</select>
+				<form action="/currentList" method="POST">
+					<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+					<select name="id" onchange="this.form.submit();">
+						<option 
+								th:each="list : ${holidayLists}" 
+		          				th:value="${list.id}" 
+		          				th:attr="selected=${list.id == currentList.id}"
+		          				th:text="${list.year}">2012</option>
+					</select>
+				</form>
 			</div>
 		</div>
 		<div class="row">
-			<table class="table table-striped table-hover">
+			<table class="table table-hover">
 				<thead>
 					<tr>
 						<th>Name</th>
@@ -54,14 +38,58 @@
 				</thead>
 				<tbody>
 					<tr th:each="i : ${holidayListItems}">
-						<td th:text="|${i.address.firstname} ${i.address.lastname}|"></td>
-						<td th:text="${i.address.fullAddress}"></td>
-						<td th:text="${i.card.name}"></td>						
-						<td th:text="${i.receivedCard}"></td>						
+							<td th:text="|${i.address.firstname} ${i.address.lastname}|"></td>
+							<td th:text="${i.address.fullAddress}"></td>
+							<td>
+								<form th:action="|/${i.id}/card|" method="POST">
+									<select name="cardId">
+										<option 
+												th:each="card : ${cards}" 
+						          				th:value="${card.id}" 
+						          				th:attr="selected=${card.id == i.card.id}"
+						          				th:text="${card.name}">2012 Printed</option>
+									</select>
+								</form>
+							</td>						
+							<td class="text-center">
+									<input type="hidden" name="id" th:value="${i.id}"/>
+									<input type="checkbox" th:attr="checked=${i.receivedCard}" />
+							</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
+	</div>
+	<div layout:fragment="footer">
+		<script>
+			var a = function() {}
+			
+			$(function() {
+				$("table select").change(function(event) {
+					
+					var tr = $(this).closest("tr");
+					tr.addClass("warning");
+					
+					// find the form related to this select
+					var results = $(this).closest("form");
+					var form = results.serialize();					
+					var url = results[0].action;
+					$.post(url, form).done(function() {
+						tr.removeClass("warning");
+						tr.addClass("success");
+										
+					}).fail(function() {
+						tr.removeClass("warning");
+						tr.addClass("danger");
+						
+					})
+				});
+				
+				$("table input[type='checkbox']").change(function(a,b,c) {
+					console.log(a,b,c);					
+				})				
+			});
+		</script>
 	</div>
   </body>
 </html>	
