--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -27,12 +27,53 @@
 
   <body>
     <div class="container">
-		<div layout:fragment="content"></div>
-    </div> <!-- /container -->
+		<div layout:fragment="content">
+			<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse"
+							data-target=".navbar-collapse">
+							<span class="sr-only">Toggle navigation</span> <span
+								class="icon-bar"></span> <span class="icon-bar"></span> <span
+								class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="/" th:href="@{/}">Holiday Cards</a>
+					</div>
+					<div class="navbar-collapse collapse">
+						<ul class="nav navbar-nav">
+						
+							<li><a href="/" th:href="@{/}">Home</a></li>
+							<li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin" th:href="@{/admin}">Admin</a></li>
+						</ul>
+						<form class="form-inline navbar-form navbar-right" role="logout" th:action="@{/logout}" method="POST">
+							<button type="submit" class="btn btn-default">Logout</button>
+							<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+						</form>
+						<p class="navbar-text navbar-right" th:text="${#authentication.name}">Name</p>
+					</div>
+					<!--/.nav-collapse -->
+				</div>
+			</div> <!--  /nav -->
+			<div class="page-header" layout:fragment="header">
+	  			<h1>Big<small>Little</small></h1>
+			</div>
+			<div class="page" layout:fragment="page"> content</div>
+		</div>
+      </div> <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script th:src="@{/js/jquery-1.10.2.min.js}"></script>
+    <script>
+    	// on load select the active menu item
+	   	$(function() {
+	   		var page = window.location.pathname;
+    		$('.navbar-nav a[href="' + page + '"]').parent().addClass('active');
+	   	});
+    </script>
+    
+	<div layout:fragment="footer"></div>
   </body>
 </html>
