--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -18,6 +18,8 @@
     <!-- Custom styles for this template -->
     <link th:href="@{/css/style.css}" href="../css/style.css" rel="stylesheet"/>
 
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -66,6 +68,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script th:src="@{/js/jquery-1.10.2.min.js}"></script>
+    <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script>
     	// on load select the active menu item
 	   	$(function() {
