--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@
 							<td th:text="${i.address.fullAddress}"></td>
 							<td>
 								<form th:action="|/hli/${i.id}/card|" method="POST">
-								<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+									<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
 									<select name="cardId">
 										<option 
 												th:each="card : ${cards}" 
@@ -53,8 +53,10 @@
 								</form>
 							</td>						
 							<td class="text-center">
-									<input type="hidden" name="id" th:value="${i.id}"/>
-									<input type="checkbox" th:attr="checked=${i.receivedCard}" />
+								<form th:action="|/hli/${i.id}/received|" method="POST">
+									<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+									<input type="checkbox" name="receivedCard" th:attr="checked=${i.receivedCard}" />
+								</form>
 							</td>
 					</tr>
 				</tbody>
@@ -62,34 +64,29 @@
 		</div>
 	</div>
 	<div layout:fragment="footer">
-		<script>
-			var a = function() {}
-			
+		<script>			
 			$(function() {
-				$("table select").change(function(event) {
-					
+				var submitFieldForm = function(event) {
 					var tr = $(this).closest("tr");
 					tr.addClass("warning");
 					
-					// find the form related to this select
+					// find the form related to this item
 					var results = $(this).closest("form");
 					var form = results.serialize();					
 					var url = results[0].action;
 					$.post(url, form).done(function() {
-						tr.switchClass("warning", "success", {duration: 20000} );
-						//tr.removeClass("warning");
-						//tr.addClass("success");
+						tr.switchClass("warning", "success");
+						setTimeout(function() {
+							tr.removeClass("success");
+						}, 3000);
 										
 					}).fail(function() {
-						tr.removeClass("warning");
-						tr.addClass("danger");
-						
-					})
-				});
+						tr.switchClass("warning", "danger");						
+					})					
+				}
 				
-				$("table input[type='checkbox']").change(function(a,b,c) {
-					console.log(a,b,c);					
-				})				
+				$("table select").change(submitFieldForm);
+				$("table input[type='checkbox']").change(submitFieldForm);
 			});
 		</script>
 	</div>
