--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -69,6 +69,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script th:src="@{/js/jquery-1.10.2.min.js}"></script>
     <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <script>
     	// on load select the active menu item
 	   	$(function() {
