--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,7 +39,7 @@
 				<tbody>
 					<tr th:each="i : ${holidayListItems}">
 							<td><a th:id="|name*{id}|" class="addressLink" th:object="${i.address}" th:href="|javascript:editDetails(*{id},'*{address}','*{address2}','*{city}','*{state}','*{zip}','*{country}', '*{firstname}', '*{lastname}');|" th:text="|${i.address.firstname} ${i.address.lastname}|"></a></td>
-							<td><a th:id="|address*{id}|" class="addressLink" th:object="${i.address}" th:href="|javascript:editDetails(*{id},'*{address}','*{address2}','*{city}','*{state}','*{zip}','*{country}', '*{firstname}', '*{lastname}');|" th:text="*{fullAddress != '' ? fullAddress : 'None'}"></a></td>
+							<td><a th:id="|addy*{id}|" class="addressLink" th:object="${i.address}" th:href="|javascript:editDetails(*{id},'*{address}','*{address2}','*{city}','*{state}','*{zip}','*{country}', '*{firstname}', '*{lastname}');|" th:text="*{fullAddress != '' ? fullAddress : 'None'}"></a></td>
 							<td>
 								<form th:action="|/hli/${i.id}/card|" method="POST">
 									<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
@@ -188,7 +188,7 @@
 						$("#name" + result.id).attr("href", href).html(name);
 						
 						// Update the address field
-						$("#address" + result.id).attr("href", href).html(fullAddress);
+						$("#addy" + result.id).attr("href", href).html(fullAddress);
 						
 						// hide the modal
 						$("#addressModal").modal('hide');
