--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
   
   <body>
   	<div layout:fragment="content">
-        <form class="form-signin" role="form" action="/login" method="POST">
+        <form class="form-signin" role="form" th:action="@{/login}" method="POST">
 	        <h2 class="form-signin-heading">Holiday Card Sign In</h2>
 			<p th:if="${param.logout}" class="alert alert-info"><span class="glyphicon glyphicon-info-sign"></span> You have been logged out</p>
 	        <p th:if="${param.error}" class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Unknown Username &amp; Password</p>      
