--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,17 +12,23 @@
 	</div>
   	<div layout:fragment="page">
 		<div class="row">
-			<div class="col-md-offset-10 col-md-2 text-right">
-				<strong>Year</strong>
-				<form th:action="@{/currentList}" method="POST">
+			<div class="col-md-offset-8 col-md-2 text-right">
+		        <button type="button" class="btn btn-default" onclick="editDetails(-1)">Add Friend</button>
+			</div>
+			<div class="col-md-2 text-right">
+				<form class="form-inline" role="form" th:action="@{/currentList}" method="POST">
 					<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
-					<select name="id" onchange="this.form.submit();">
-						<option 
-								th:each="list : ${holidayLists}" 
-		          				th:value="${list.id}" 
-		          				th:attr="selected=${list.id == currentList.id}"
-		          				th:text="${list.year}">2012</option>
-					</select>
+					  <div class="form-group">
+					    <label for="id">Year</label>
+						<select name="id" onchange="this.form.submit();" class="form-control">
+							<option 
+									th:each="list : ${holidayLists}" 
+			          				th:value="${list.id}" 
+			          				th:attr="selected=${list.id == currentList.id}"
+			          				th:text="${list.year}">2012</option>
+						</select>
+					  </div>				
+					
 				</form>
 			</div>
 		</div>
@@ -138,6 +144,7 @@
 		</div><!-- /.modal -->
 	
 		<script>
+		/* <![CDATA[ */
 			//helper function to set the value on an input field
 			var setFieldValue = function(key, value) {
 				$("#" + key).val(value);
@@ -157,7 +164,9 @@
 				setFieldValue("lastname", lastname);
 
 				// Display the user's name
-				$("#addressName").html(firstname + " " + lastname);
+				var name = !firstname && !lastname ? "New User" : firstname + " " + lastname;
+				
+				$("#addressName").html(name);
 								
 				// Hide any error messages
 				$("#addressErrorMessage").addClass("hidden");
@@ -178,8 +187,20 @@
 				$("#addressModal .saveChanges").button("loading");
 				
 				var form = $("#addressForm");
-				$.post(form.attr("action"), form.serialize())
-					.done(function(result) {
+				$.ajax({
+					type: "POST",
+					url: form.attr("action"),
+					data: form.serialize(),
+					context: form
+					}).done(function(result) {
+						// Find the original id from the form
+						var id = $('[name=id]', this).val();
+						
+						// if id was -1 then it was a new user so reload page
+						if (id == -1) {
+							window.location.reload(true);
+						}
+						
 						var href = "javascript:editDetails(" + result.id + ",'" + result.address + "','" + result.address2 + "','" + result.city + "','" + result.state + "','" + result.zip + "','" + result.country + "', '" + result.firstname + "', '" + result.lastname + "');";						
 						var name = result.firstname + " " + result.lastname;
 						var fullAddress = result.address + append(result.address2) + append(result.city) + append(result.state) + append(result.zip) + append(result.country);
@@ -249,6 +270,7 @@
 				
 				updateCardCount();
 			});
+			/* ]]> */		
 		</script>
 	</div>
   </body>
