--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -13,7 +13,7 @@
   	<div layout:fragment="page">
 		<p th:if="${message}" class="alert alert-info"><span class="glyphicon glyphicon-info-sign"></span><span th:text="${message}"></span></p>
 		<div class="row">
-			<form class="form-inline" role="form" action="@{/admin/card}" method="POST">
+			<form class="form-inline" role="form" th:action="@{/admin/card}" method="POST">
 			  <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
 			  <div class="form-group">
 			    <label class="sr-only" for="cardName">New Card</label>
@@ -27,20 +27,11 @@
 			</form>
 		</div>
 		<div class="row">
-			<form class="form-inline" role="form" action="@{/admin/list}" method="POST">
+			<form class="form-inline" role="form" th:action="@{/admin/list}" method="POST">
 			  <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
 			  <div class="form-group">
 			    <label class="sr-only" for="listYear">New List Year</label>
 			    <input type="number" class="form-control" id="listYear" name="year" placeholder="New List Year"/>
-			  </div>
-			  <div class="form-group">
-			    <label class="sr-only" for="defaultCard">Default Card</label>
-				<select class="form-control" name="defaultCardId" id="defaultCard">
-					<option 
-							th:each="card : ${cards}" 
-	          				th:value="${card.id}" 
-	          				th:text="${card.name}">2012 Printed</option>
-				</select>			  
 			  </div>
 			  <button type="submit" class="btn btn-default">Save</button>
 			</form>
