Add print and a lot of other stuff

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,12 +9,50 @@
   <body class="home">
 	<div layout:fragment="header">
  			<h1>Holiday Cards List <small>Friends n' stuff</small> <small class="pull-right"><span id="count"></span> cards</small></h1>
+ 			<div class="row">
+ 				<div class="col-sm-offset-11">
+					<button type="button" class="btn btn-default" onClick="goToPrint()">
+					  <span class="glyphicon glyphicon-print" aria-hidden="true"></span> Print
+					</button>
+				</div>
+ 			</div>
 	</div>
   	<div layout:fragment="page">
 		<div class="row">
-			<div class="col-md-offset-8 col-md-2 text-right">
+			<div class="col-md-offset-1 col-md-2 text-right">
 		        <button type="button" class="btn btn-default" onclick="editDetails(-1)">Add Friend</button>
 			</div>
+			<div class="col-md-4 text-right">
+				<form class="form-inline" role="form" th:action="@{/card}" method="POST">
+					<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+					  <div class="form-group">
+					    <label for="id">Card</label>
+						<select name="id" onchange="this.form.submit();" class="form-control">
+							<option value="" th:text="|Select A Card|"></option>
+							<option 
+									th:each="list : ${cards}" 
+			          				th:value="${list.id}" 
+			          				th:attr="selected=${list.id == currentCard?.id}"
+			          				th:text="${list.name}">2012</option>
+						</select>
+					  </div>				
+					
+				</form>
+			</div>
+			<div class="col-md-3 text-right">
+				<form class="form-inline" role="form" th:action="@{/confirmed}" method="POST">
+					<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
+					  <div class="form-group">
+					    <label for="id">Confirmed</label>
+						<select name="confirmedAddress" onchange="this.form.submit();" class="form-control">
+							<option value="" th:text="|Either|" th:selected="${ currentConfirmed==null }" ></option>
+							<option value="true" th:text="Confirmed" th:selected="${ currentConfirmed }"></option>
+							<option value="false" th:text="|Not Confirmed|" th:selected="${ currentConfirmed != null and !currentConfirmed}"></option>
+						</select>
+					  </div>				
+					
+				</form>
+			</div>			
 			<div class="col-md-2 text-right">
 				<form class="form-inline" role="form" th:action="@{/currentList}" method="POST">
 					<input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
@@ -277,6 +315,10 @@
 				
 				updateCardCount();
 			});
+			
+			function goToPrint() {
+				window.open("./print");
+			}
 			/* ]]> */		
 		</script>
 	</div>
