--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -18,7 +18,7 @@
     <!-- Custom styles for this template -->
     <link th:href="@{/css/style.css}" href="../css/style.css" rel="stylesheet"/>
 
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<link th:href="@{/css/jquery-ui.css}" href="../css/jquery-ui.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
